# server_benchmarks_old

./: README.md  template.html
bottle/: app.py
database/: fortunes.sql
elixir_test/: README.md  mix.exs
elixir_test/lib/: elixir_test.ex
elixir_test/lib/elixir_test/: web.ex
express-test/: index.js
falcon/: app.py
flask/: app.py  cyclone.py
gin/: fortunes.html  gin.go
go/: gin.go
hapijs/: LICENSE  README.md  index.js  package.json
hapijs/app/controllers/: core.js
hapijs/app/routes/: core.js
hapijs/app/templates/: fortunes.hbs
hapijs/config/: manifest.js
hapijs/lib/: postgres.js
iris/: iris.go
kitura-test/: Package.swift
kitura-test/Sources/: main.swift
kitura-test/Tests/: LinuxMain.swift
kitura-test/Tests/kitura-test/: kitura-testTests.swift
sinatra/: Gemfile  app.rb
sinatra/views/: fortunes.erb
urweb/: README.md  bench.ur  bench.urp  bench.urs
vapor-test/App/: main.swift
warp-benchmark/: LICENSE  README.md  benchmarks.html  stack.yaml  warp-hello-world.cabal
warp-benchmark/app/: Main.hs
warp-benchmark/src/: WarpBench.hs
warp-benchmark/test/: Spec.hs
zewo/: Package.swift
zewo/Sources/: main.swift
