name:                warp-hello-world
version:             0.1.0.0
synopsis:            hello world warp
description:         Please see README.md
homepage:            https://github.com/sa1/server_benchmarks
license:             BSD3
license-file:        LICENSE
author:              Saurabh Kumar
maintainer:          saurabhgeek92@gmail.com
copyright:           2016 Saurabh Kumar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , warp
                     , wai
                     , http-types
                     , lucid
                     , hasql
                     , hasql-pool
                     , transformers
                     , bytestring
                     , text
                     , aeson
                     , vector
                     , weigh
                     , either
  exposed-modules:     WarpBench

executable warp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -optc-O3 -funfolding-use-threshold=512 -fexpose-all-unfoldings -rtsopts -with-rtsopts=-N -with-rtsopts=-H6G -with-rtsopts=-A4m
  build-depends:       base
                     , hasql
                     , hasql-pool
                     , wai
                     , warp
                     , warp-hello-world
  default-language:    Haskell2010

test-suite bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , warp-hello-world
                     , weigh
                     , criterion
                     , hasql
                     , hasql-pool
                     , deepseq
                     , either
  ghc-options:         -threaded -fno-full-laziness -rtsopts -with-rtsopts=-N -with-rtsopts=-H6G -with-rtsopts=-A4m
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sa1/server_benchmarks
